--- a/templates/network_jobs/navbar2.html
+++ b/templates/network_jobs/navbar2.html
@@ -2,7 +2,7 @@
     <a href="{% url 'login_register' %}" class="logo">NetWork</a>
     <nav class="nav-links">
         <a href="{% url 'login_register' %}" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Profile</a>
+        <a href="{% url 'my_profile' %}" class="nav-link">Profile</a>
         <a href="#" class="nav-link">Network</a>
         <div class="dropdown">
             <a href="#" class="nav-link active">Jobs</a>
