--- a/templates/network_jobs/navbar.html
+++ b/templates/network_jobs/navbar.html
@@ -6,7 +6,7 @@
     
     <nav class="nav-links">
         <a href="{% url 'login_register' %}" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Profile</a>
+        <a href="{% url 'my_profile' %}" class="nav-link">Profile</a>
         <a href="#" class="nav-link">Network</a>
         <div class="nav-dropdown">
             <a href="#" class="nav-link">Jobs</a>
